# Mark1

./: .gitignore  ACTIVE_RULES.md  AGENTS.md  BOOT.md  BOOTSTRAP.md  BOOT_INDEX.md  CONTINUE_PROMPT.md  Context-安全防护方案-v1.md  HANDOFF.md  HOST_CONTEXT.md  IDENTITY.md  MEMORY.md  PLANS.md  PLANS_INDEX.md  PROJECT_INDEX.md  PROJECT_VERSIONS.md  README.md  RULES_INDEX.md  SKILL_CATALOG.md  SOUL.md  TOOLS.md  TOOLS_INDEX.md  USER.md  WORKSPACE_INDEX.md  analysis.md  openclaw.json  pyproject.toml  skills-lock.json  tmp
.config-backup/: openclaw.json
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  INBOX.md  LEARNINGS.md
config/: control-ui-branding.json  mcporter.json
docs/: Unity模型整理-Materials_Standard材质重命名v2原名对照.md  Unity模型整理-材质重命名原名对照.md  Unity模型整理-模型重命名v2原名对照.md  Unity模型整理-模型重命名原名对照.md  Unity模型整理-贴图材质重命名v2原名对照.md  install-registry.md  zh-skill-router.md  公司-Linux-2026-05-09-语音回复与Control-UI新增能力总结.md  公司-Linux-OpenClaw-本机配置期望.md  公司-Linux-OpenClaw-维护说明.md  公司-Linux-主会话语音回复默认接入总结.md  多机器-读取与更新规则.md  对系统操作必须要参考的崩坏案例.md  对系统操作必须要参考的崩坏案例.md.bak.20260706-110216  掌机-Windows-OpenClaw-维护说明.md  方案与系统工作隔离规则.md  模型使用说明.md  系统自动行为盘点.md  贾维斯中枢-API密钥清单.md  贾维斯中枢-Mark2-体检报告-2026-06-15.md  贾维斯中枢-Mark2-升级体系规范.md  贾维斯中枢-Mark2-回收机制设计.md  贾维斯中枢-Mark2-小模型清单.md  贾维斯中枢-Mark2-开发工作台设计.md  贾维斯中枢-Mark2-部署启动手册.md  贾维斯中枢安全体系设计.md  贾维斯系统架构全景分析.md  贾维斯系统架构分析报告-2026-06-10.md  贾维斯自进化方案-self-improvement与capability-evolver融合.md  贾维斯语音架构-理论设计与路线图.md  贾维斯语音架构-详细设计.md  通用-AI模型路由问题排查与修复手册.md  通用-CPU负载过高临时处理方案.md  通用-OpenClaw-ControlUI黑屏应急修复.md  通用-OpenClaw-FrontstageGuardian深度分析.md  通用-OpenClaw-Git工作区污染规则.md  通用-OpenClaw-升级后自检清单.md  通用-OpenClaw-升级记录.md  通用-OpenClaw-大工程稳定运行方案.md  通用-OpenClaw-当前正式架构状态.md  (+16 more)
mark42-pkg/: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  conftest.py  docker-build.sh  install.sh  pyproject.toml
mark42-pkg/.github/workflows/: ci.yml  release.yml
mark42-pkg/mark42/: __init__.py  __main__.py  actions_runner.py  advisor_client.py  algo_scheduler.py  anomaly_detector.py  armor.py  chaos_engine.py  circuit_breaker.py  cli.py  code_analyzer.py  code_compressor.py  compaction_diag.py  compress_queue.py  config.py  consciousness.py  context_safety.py  core_registry.py  cost_tracker.py  diff_compressor.py  engine.py  error_archive.py  governance.py  heavy.py  installer.py  llm_provider.py  llm_text_compressor.py  log_classifier.py  log_deduplicator.py  log_setup.py  logs.py  perf_bench.py  pii_redactor.py  smart_crusher.py  text_compressor.py  user_config.py  utils.py  watchdog.py
mark42-pkg/mark42/cli/: __init__.py  assemble.py  parser.py  status.py
mark42-pkg/mark42/systemd/: mark42-armor-guard.service.tmpl  mark42-bootstrap.service.tmpl  mark42-engine-daemon.service.tmpl  mark42-watchdog.service.tmpl  mark42-watchdog.timer
mark42-pkg/mark42/templates/: config.toml
mark42-pkg/tests/: __init__.py  test_algo_scheduler.py  test_armor.py  test_circuit_breaker.py  test_cli.py  test_code_compressor.py  test_compaction_diag.py  test_compress_queue.py  test_config.py  test_consciousness.py  test_context_safety.py  test_diff_compressor.py  test_engine.py  test_error_archive.py  test_failure_contract.py  test_heavy.py  test_llm_text_compressor.py  test_log_deduplicator.py  test_logs.py  test_output_guard.py  test_pii_redactor.py  test_smart_crusher.py  test_text_compressor.py  test_utils.py  test_watchdog.py
mark42-pkg/tests/unit/: test_cluster_manager.py
memory/: 2026-03-31.md  2026-04-01.md  2026-04-02.md  2026-04-03-overlap-fix.md  2026-04-03.md  2026-04-07.md  2026-04-08.md  2026-04-20-qianqian-memories.md  2026-04-20.md  2026-04-21-assistant-media.md  2026-04-21-photo-archive.md  2026-04-21-xtts-fix.md  2026-04-21.md  2026-04-22-memory-check.md  2026-04-22-wechat-bridge.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-27-async-offload.md  2026-04-27-frontend-skill-search.md  2026-04-29.md  2026-04-30-sync-rules-identity.md  2026-04-30.md  2026-05-06.md  2026-05-07-1444.md  2026-05-07-1617.md  2026-05-07-1729.md  2026-05-07.md  2026-05-08-0836.md  2026-05-08-1236.md  2026-05-08-1632.md  2026-05-08-1705.md  2026-05-08.md  2026-05-09.md  2026-05-11.md  2026-05-12.md  2026-05-13.md  2026-05-14.md  2026-05-15.md  2026-05-18.md  (+15 more)
notes/: gpu-preset-spkemb-support.md
openclaw-env/: NEW_MACHINE_BOOTSTRAP.md  QUICK_RECOVERY.md  README.md  openclaw.local.example.json  post-restore-check.sh  qmd-agent-status.sh  qmd-prefetch-models-via-mirror.sh  restore-openclaw-env.sh  restore-skills.sh  restore-tooling.sh  secrets-checklist.example.md  skills-manifest.json
plans/: mark42-market-research-context-management.md
proto-tide/: ERROR_LOG.md  README.md  STARTUP.md  package-lock.json  package.json
proto-tide-static/: enhanced.html  index.html  login.html  register.html
pulsenest-php/: account.php  admin.php  config.php  create-post.php  edit-post.php  forgot-password.php  index.php  layout.php  login.php  logout.php  notifications.php  post.php  posts.php  register.php  reset-password.php  schema.sql  style.css  (+2 more)
(+705 files in other folders)
