[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mark42"
version = "2.6.0"
description = "Mark42 模块化智能铠甲系统 - OpenClaw 上下文守护与循环引擎"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "袁文涛"}
]
keywords = ["openclaw", "context-guard", "ai-agent", "armor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    # Mark42 仅依赖 Python 标准库，无第三方依赖
]

[project.scripts]
mark42 = "mark42.cli:main"

[tool.setuptools.packages.find]
include = ["mark42*"]

[tool.setuptools.package-data]
mark42 = ["systemd/*.tmpl", "systemd/*.timer", "templates/*.json", "templates/*.toml"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (formatter handles)
    "S101",   # use of assert (tests use it)
    "S603",   # subprocess call (checked separately in CI)
    "S607",   # partial path executable
    "E402",   # module-import-not-at-top (工程代码中函数内导入是常见模式)
    "B008",   # function call in default argument
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B", "UP", "F403", "F405", "E712"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
no_implicit_reexport = false
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
